--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <div class="hero-logo">
-          <img class="" src="img/ValarisLogo.png" alt="ProOnliPc">
+          <img class="" src="img/ValarisLogo.png" alt="ValarisROG_Logo">
         </div>
 
         <h1>COMING SOON</h1>
         <h2>Created to <span class="rotating">TEST your build,	enjoy the PvP, enjoy the PvE,	enjoy the WoE</span></h2>
         <div class="actions">
 		<img src="img/Windows_badge.png">
-          <a "https://drive.google.com/file/d/1Sd6MmkBiNQprrBaa-psGQX7r3DiAN5U8/view?usp=sharing" class="btn-get-started">Download</a>
+          <a "" class="btn-get-started">Download</a>
           <a href="https://discord.gg/RqMdqu2W2d" class="btn-services">Create Account</a>
 		  <a href="https://discord.gg/RqMdqu2W2d" class="btn-services">Discord</a>
 		<a href="https://discord.gg/RqMdqu2W2d"><img src="img/discord-button.png"></a>
@@ -110,10 +110,29 @@
     </div>
   </header>
   <!-- #header -->
+	
+	<!--==========================
+		Video Section
+	============================-->
+	<hr>
+  <section id="video">
+    <div class="container wow fadeInUp">
+      <div class="row">
+					<div class="herx">
+
+			<center><video width="900" height="550" controls autoplay="true" loop="true" muted="true">
+<!-- cambias esa url por tu video y tipo de video. (en tu caso sera: video/mp4) -->
+			<source src="img/VRagnarok.mp4" type="video/mp4"></center>
+			</video>
+			</div>
+      </div>
+    </div>
+  </section>
 
   <!--==========================
   About Section
   ============================-->
+
   <section id="about">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -146,11 +165,13 @@ Cards ( Normal, Mini boss & Boss) and equipment (normal, rental & event) will be
   <!--==========================
   Services Section
   ============================-->
+  
 
 
   <!--==========================
   Subscrbe Section
   ============================-->
+
 
 
   <!--==========================
@@ -176,7 +197,21 @@ Cards ( Normal, Mini boss & Boss) and equipment (normal, rental & event) will be
   <!--==========================
   Footer
 ============================-->
-
+  <footer id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="copyright">
+            &copy; Copyright <strong>Valaris ROG</strong>. All Rights Reserved
+          </div>
+          <div class="credits">
+        
+            Website Designed by <a href="www.valarisROG.com">GM ODIN</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
