--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
       <div class="row">
 					<div class="herx">
 
-			<center><video width="900" height="550" controls autoplay="true" loop="true" muted="true">
-<!-- cambias esa url por tu video y tipo de video. (en tu caso sera: video/mp4) -->
-			<source src="img/VRagnarok.mp4" type="video/mp4"></center>
-			</video>
+
+		<center><iframe width="900" height="550" src="https://www.youtube.com/embed/9ZdoZNtAMLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></center></iframe>
 			</div>
       </div>
     </div>
